# idee

./: .gitignore  README.md  pyproject.toml
idee/: main.py
idee/agents/: base.py  claude.py  gemini.py  gpt.py  templates.py  types.py
idee/core/: config.py  history_db.py  logging.py
idee/docs/: chat-completions-vs-responses.md
idee/tools/: base.py  bash.py  computer.py  editor.py  files.py  history.py  media_utils.py  summary.py
idee/tui/: app.css  app.py
tests/: test_multimodal_tool_output.py
